# pet_sn

./: .gitignore  alembic.ini  pyproject.toml
tsn/: main.py
tsn/core/: settings.py
tsn/core/core_dependency/: db_dependency.py
tsn/database/alembic/: env.py
tsn/database/alembic/versions/: 2025_03_23_2217-6a8d02dc3393_create_user_table.py
tsn/database/mixins/: id_mixins.py  timestamps_mixins.py
tsn/database/models/: __init__.py  base.py  user.py
