[tool.poetry]
name = "pet_sn"
version = "0.1.0"
description = ""
authors = ["Radik Agliamov <aglyam92@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
